# smartcontract

./: .gitignore  ALL-FILES-SUMMARY.txt  ALL-WALLET-FILES.txt  API_OPTIMIZATION_COMPLETE.md  ARTILLERY-TESTING-README.md  AUTOMATED_DEPLOYMENT_README.md  Anchor.toml  BACKEND_OPTIMIZATION_GUIDE.md  BLOCKCHAIN_SERVICE_README.md  CIRCUIT_BREAKER_GUIDE.md  CLIENT_BACKEND_INTEGRATION_FIXES.md  COMPLETED_FEATURES_SUMMARY.md  COMPLETE_DEPLOYMENT_GUIDE.md  CONNECTION_STABILITY_OPTIMIZATION_README.md  CONSOLE-TEST.txt  COPY-PASTE-CODE.txt  COPY-PASTE-SWITCH.txt  CORS-FIXED-README.md  CUSTOM-KEY-TEST.txt  CUSTOM-WALLET-USAGE.txt  Cargo.toml  DATABASE_SETUP_GUIDE.md  DB_POOLING.md  DEPLOYMENT_READY_CHECKLIST.md  DEPLOYMENT_READY_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  Dockerfile.build  Dockerfile.production  ENERGY_COLLECTION_SETUP.md  ENHANCEMENT_OPPORTUNITIES.md  EXTRACT_SOLANA_GUIDE.md  FINAL-TEST.txt  FINAL_DEPLOYMENT_INSTRUCTIONS.md  FINAL_LOAD_TESTING_REPORT.md  FINAL_SYSTEM_STATUS.md  FIX-NOW-README.md  FIX-WALLET-ERROR.md  GAMEV1_IMPROVEMENT_GUIDE.md  GAME_ENGINE_CONNECTION_BACKEND.md  (+586 more)
artillery-html-reports/: http-api-load-test-1761186760885.html
artillery-reports/: http-api-load-test-1761186760885.json
blockchain-service/: Cargo.toml  build.rs  real_test.js
blockchain-service/programs/game-token/: Anchor.toml  Cargo.toml  Xargo.toml  run_anchor_build.bat
blockchain-service/programs/game-token/src/: lib.rs
blockchain-service/proto/: blockchain.proto
blockchain-service/src/: blockchain.rs  game_token_client.rs  main.rs  websocket_token.rs
bridge/: Anchor.toml  README.md  package-lock.json  package.json  test_bridge_system.js  test_simple.js  tsconfig.json
bridge/programs/bridge_contract/: Cargo.toml
bridge/programs/bridge_contract/src/: lib.rs
client/: DEBUG_GAME_INTEGRATION.md  ETHEREUM-WALLET-TEST-README.md  README-ETHEREUM-TEST-VIETNAMESE.md  README-WALLET-IMPROVEMENTS.md  WALLET-IMPROVEMENTS-SUMMARY.md  WALLET-TEST-DUAL-NETWORK-README.md  WALLET-TEST-FIXED-README.md  WALLET-TEST-README.md  check-admin-creds.js  complete-game-simulation.js  create-admin.js  debug-camera-mouse.js  debug-input.js  debug-lane-movement.js  debug-mouse-input.html  eslint.config.js  ethereum-address-validator.html  ethereum-format-test.html  ethereum-wallet-test.html  explain-camera-controls.js  final-lane-test.js  final-optimization-test.js  final-test.html  game-features-summary.js  index.html  mouse-movement-test.html  open-ethereum-test-simple.bat  open-ethereum-test.bat  open-ethereum-validator.bat  open-format-test.bat  open-wallet-test-updated.bat  open-wallet-test.bat  optimization-summary.js  package-lock.json  package.json  playwright.config.ts  run-wallet-test-dev.bat  simple-test.html  simple_test.html  test-camera-follow-behavior.js  (+24 more)
common-net/: Cargo.toml
comprehensive-test-results/: integration-tests-results.txt  performance-tests-results.txt  test-report.html  unit-results.txt
config/: alerts.yml  loki.yml  production.env  prometheus.yml
eneegy-blockchain-service/: Dockerfile
final-complete-results/: performance-tests-results.txt  test-report.html  unit-results.txt
final-comprehensive-results/: performance-tests-results.txt  test-report.html  unit-results.txt
final-tests-results/: performance-tests-results.txt  test-report.html  unit-results.txt
game_token/: .gitignore  80_20_LOGIC_COMPLETION_REPORT.md  Anchor.toml  Anchor_v2.toml  BUILD_AND_DEPLOY_GUIDE.md  BUILD_COMMAND.bat  BUILD_INSTRUCTIONS.txt  BuildGuide.ps1  DEPLOYMENT_COMPLETION_REPORT.md  FINAL_BUILD_GUIDE.md  FINAL_LOGIC_CONFIRMATION.md  FREE_SOLUTIONS_COMPARISON.md  GAME_INTEGRATION_REPORT.md  GAME_UI_README.md  GITHUB_CODESPACES_GUIDE.md  GOOGLE_CLOUD_SHELL_GUIDE.md  INTEGRATION_GUIDE.md  LINUX_DEPLOYMENT_GUIDE.md  LOCAL_LINUX_SETUP_GUIDE.md  MAINNET_DEPLOYMENT_GUIDE.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PLAYER_CLAIM_README.md  PLAYGROUND_DEPLOYMENT_COMPLETE_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  README_PRODUCTION.md  SOLANA_PLAYGROUND_DEPLOY.md  SOLANA_PLAYGROUND_GUIDE.md  WSL2_FIX_GUIDE.md  alternative_deployment_guide.md  alternative_solutions.md  auto_deploy.sh  auto_mint_scheduler.js  auto_mint_scheduler_simple.js  auto_mint_test_result.json  blockchain_integration.js  build_deploy_instructions.ps1  build_sbf_windows.ps1  (+161 more)
game_token/programs/game_token/: Cargo.toml
game_token/programs/game_token/src/: lib.rs
game_token/programs/game_token_v2/: Cargo.toml
gateway/: Cargo.toml  LOGGING_CONFIG.md  auth.json
gateway/src/: auth.rs  batch_processor.rs  blockchain_client.rs  cache.rs  circuit_breaker.rs  connection_pool.rs  encryption.rs  error_handling.rs  game_metrics.rs  game_token_client.rs  hd_wallet.rs  integration_tests.rs  lib.rs  logging.rs  main.rs  memory.rs  middleware.rs  security.rs  solana_client.rs  transport.rs  types.rs  wallet.rs  webrtc.rs  websocket_token.rs  worker_client.rs
gateway/tests/: http_ws.rs
guides/: PHASE1_NATIVE_FOUNDATION.md  PHASE2_PRODUCTION_READINESS.md
load-test-results/: LOAD_TESTING_REPORT.md  comprehensive-load-test-results.json  comprehensive-load-test-with-data-results.json  comprehensive-results.json  mixed-workload-results.json  pocketbase-test.json  simple-test-results.json  stress-test-results.json  websocket-no-subprotocol-results.json  websocket-performance-results.json  websocket-simple-results.json
phase3-database-cluster/: db-load-balancer.py  monitor-database-cluster.sh  postgresql-master.conf  postgresql-replica.conf  setup-replication.sh
phase3-load-balancer/: deploy-nginx.sh  load-balancer-dashboard.json  nginx.conf  nginx.service  (+1 more)
programs/simple_transfer/: Cargo.toml
programs/simple_transfer/src/: lib.rs
tokenMint/game_token/: Anchor.toml  Cargo.toml  README.md  package.json
tokenMint/game_token/app/: package.json  tsconfig.json
tokenMint/game_token/app/src/: App.tsx  index.tsx  solanaService.ts
tokenMint/game_token/app/src/components/: WalletConnector.tsx
tokenMint/game_token/src/: lib.rs
tokenMint/game_token/tests/: game_token.ts
(+306 files in other folders)
