[package]
name = "blockchain-service"
version = "0.1.0"
edition = "2021"

# Standalone service to avoid dependency conflicts with main gateway
[workspace]
exclude = ["programs/game-token"]

[dependencies]
# Solana/Anchor for blockchain operations - COMPATIBLE VERSIONS
solana-sdk = "1.18"
solana-client = "1.18"
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "4.0"

# Local game token program - temporarily disabled for compilation
# game-token = { path = "programs/game-token" }

# Async runtime (compatible with Solana SDK)
tokio = { version = "1.14", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }

# WebSocket support
tokio-tungstenite = "0.20"

# Tracing with env-filter
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compatibility with Solana SDK dependencies
zeroize = "1.3"

# gRPC for communication with main gateway
tonic = "0.11"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.11"

[profile.release]
overflow-checks = true
