[package]
name = "simple_transfer"
version = "0.1.0"
description = "Simple token transfer program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_transfer"

[dependencies]
solana-program = "1.16.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"


