[package]
name = "game_token"
version = "0.1.0"
description = "Game Token Program for Eneegy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "game_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.27.0", features = ["associated_token"] }
solana-program = "1.16.0"
