[package]
name = "game_token"
version = "0.1.0"
description = "Eneegy Game Token Mint System - Eat Particles, Mint Tokens"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "game_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
init-if-needed = []
default = ["init-if-needed"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1