[package]
name = "game_token_v2"
version = "0.2.0"
description = "Eneegy Game Token Mint System V2 - New Game Pool Address"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "game_token_v2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
init-if-needed = []
default = ["init-if-needed"]

[dependencies]
solana-program = "1.16.0"
borsh = "0.10.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1